# lilith

./: .env.example  .gitignore  README.md  benchmarks.yaml  lilith.webm  pyproject.toml
.github/workflows/: retrieval-eval.yml
prompts/: context_date.md  soul.md  system_fragments.md  tool_protocol.md  worker.md
prompts/search/: entity_extract.md  intent.md  plan.md  refine.md  rerank.md
prompts/tools/: calendar_read.md  calendar_write.md  email_get.md  email_get_thread.md  emails_summarize.md  execute_python.md  read_page.md  read_pages.md  search.md  tasks_read.md  tasks_write.md  universal_search.md
src/: __init__.py  main.py
src/contracts/: __init__.py  mcp_search_v1.py
src/core/: agent.py  bootstrap.py  config.py  logger.py  prompts.py  session_recorder.py  tool_call.py  worker.py
src/eval/: baseline_metrics.json  benchmark.py
src/interfaces/: __init__.py  cli.py  oneshot.py  telegram.py
src/llm/: formatters.py  openrouter_client.py  vllm_client.py
src/mcp/: __init__.py  client.py
src/mcp_client/: __init__.py  client.py
src/observability/: __init__.py  langsmith.py
src/orchestrators/: __init__.py
src/orchestrators/search/: __init__.py  capabilities.py  constants.py  dispatcher.py  entity_extraction.py  fusion.py  intent_modules.py  interface.py  models.py  orchestrator.py  router.py
src/orchestrators/search/backends/: __init__.py  browser.py  calendar.py  email.py  tasks.py  web.py
src/search/: __init__.py  interface.py  models.py  orchestrator.py
src/search/backends/: __init__.py  calendar.py  email.py  tasks.py  web.py
src/services/: __init__.py  google_auth.py  google_service.py
src/tools/: __init__.py  base.py  calendar_read.py  calendar_write.py  email.py  execute_python.py  read_page.py  search.py  tasks_read.py  tasks_write.py  universal_search.py
src/utils/: confirm.py  stt.py
tests/: conftest.py
tests/e2e/: conftest.py  test_calendar_search.py  test_external_search.py  test_search_journeys.py
tests/unit/: test_dispatcher_request_shaping.py  test_entity_extraction_capability_rules.py  test_eval_benchmark_gate.py  test_intent_modules.py  test_mcp_env_forwarding.py  test_mcp_search_contract.py  test_oneshot_interface.py  test_orchestrator_logic.py  test_orchestrator_refinement.py  test_router_filters.py  test_router_more.py  test_router_properties.py
