[project]
name = "lilith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.7.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "docker>=7.1.0",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "python-telegram-bot>=22.6",
    "markdown-it-py>=4.0.0",
    "bleach>=6.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "langsmith>=0.2.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
